# smart_money

./: .gitignore  Cargo.toml  README.md  app.toml.example  config.toml  env.example
.github/workflows/: release.yml
migrations/: 20241219020242_spl_token.down.sql  20241219020242_spl_token.up.sql
smart/: Cargo.toml
smart/examples/: solana_client.rs
smart/src/: abi.rs  config.rs  daemon.rs  lib.rs  main.rs  models.rs  solana_client.rs  web.rs
smart/src/sol_client/: client.rs  mod.rs
smart/src/strategies/: mod.rs  profit_holding.rs
template/: Cargo.toml
template/src/: daemon.rs  lib.rs  main.rs  web.rs
utils/: Cargo.toml  build.rs
utils/src/: lib.rs  version.rs
