[package]
name = "smart"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
chrono = "0.4.38"
clap = { version = "4.5.22", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlite",
    "tls-native-tls",
] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = ["add-extension", "trace"] }
tracing = "0.1.41"
utils = { version = "0.1.0", path = "../utils" }
validator = { version = "0.19.0", features = ["derive"] }
solana-client = "1.16"
solana-sdk = "1.16"
solana-account-decoder = "1.16"
futures = "0.3"
async-trait = "0.1"
