[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = { version = "0.4.38", features = ["serde"] }
time = { version = "0.3.36", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
] }

[build-dependencies]
anyhow = "1.0.83"
vergen-gix = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
